--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ disqusShortname = ""
 
   # Provide your metadata here.
   name = "Ishita Gupta"
-  description = "Your description"
+  description = "I'm trying to explore the world of data. Here's my journey."
 
   # Link custom assets relative to /static
   custom_css = []
@@ -38,7 +38,7 @@ disqusShortname = ""
   # Navigation Section
   [params.navigation]
     title = "Ishita Gupta"
-    subtitle = "By HTML5 Up"
+    #subtitle = "By HTML5 Up"
     menu = "Menu"
     # Optional logo as brand stored in img/
     # logo = "logo.png"
@@ -82,15 +82,25 @@ disqusShortname = ""
     # To change the background image on the homepage banner, replace 'banner.jpg' in
     # the 'static/img' folder.
     title = "Hi, my name is Ishita"
-    subtitle = "A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP\nAND RELEASED UNDER THE CREATIVE COMMONS."
-    buttonText = "Get Started"
+    subtitle = "I'm trying to explore the world of data. Here's my journey."
+    buttonText = "Get to know me!"
 
+    # Section Type Two
+    [params.two]
+      enable = true
+      title = "About me"
+      subtitle = """Hi, I am Ishita Gupta and I am from India.
+      During my undergraduation in IT engineering, I explored the field of data analysis and was fascinated by the intersection of business and data.
+      That is how I ended up in the MAM programme at London Business School.
+      I am quite passionate about Strategy and Product. In my free time, you can see me engrossed in a book in a comfortable corner, cooking some Indian food or rewatching a tennis match (Hala Rafa)!  """
+      buttonText = "Get Started"
+      url = "blogs"
 
   # Tiles Section
   [params.tiles]
     enable = true
     # Display your showcases here.
-    
+
     [[params.tiles.showcase]]
       title = "NYT masks"
       subtitle = "Ipsum Dolor Sit Amet"
@@ -135,24 +145,14 @@ disqusShortname = ""
     # For more informtion take a look at the README.
     # To add more blogs just copy and paste the code.
 
-  # Section Type Two
-  [params.two]
-    enable = true
-    title = "Massa libero"
-    subtitle = """Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. 
-    Mauris aliquet magna magna sed nunc rhoncus pharetra. 
-    Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. 
-    Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero.
-    Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus."""
-    buttonText = "Get Started"
-    url = "blogs"
+
 
 
   # Contact section
   [params.contact]
-    enable = true
-    buttonSend = "Send message"
-    buttonClear = "Clear"
+   enable = true
+   buttonSend = "Send message"
+   buttonClear = "Clear"
 
     # Since this template is static, the contact form uses www.formspree.io as a
     # proxy. The form makes a POST request to their servers to send the actual
@@ -170,49 +170,49 @@ disqusShortname = ""
     # Contact Section
     # You can add multiple emails, phone numbers, or addresses
     # by copying the corresponding map with frontmatter code.
-    [[params.contact.email]]
+  [[params.contact.email]]
     title = "Email"
-    email = "example@domain.com"
+    email = "igupta.mam2021@london.edu"
 
-    [[params.contact.phone]]
+  [[params.contact.phone]]
     title = "Phone"
-    phone = "(000) 000-0000 x1234"
+    phone = "(044) 1234567890"
 
     [[params.contact.address]]
     title = "Address"
-    street = "Street"
-    city = "City, ST 00000"
-    country = "Country"
+    #street = "Street"
+    city = "London, NW86JY"
+    country = "United Kingdom"
 
   # Footer section
   [params.footer]
     enable = true
-    copyright = "Company Name"
+    copyright = "Ishita Gupta"
 
     # Uses font awesome icons
-    [[params.footer.social]]
-      icon = "fa-twitter"
-      url= "https://www.twitter.com"
-      label = "Twitter"
+  #  [[params.footer.social]]
+    #  icon = "fa-twitter"
+    #  url= "https://www.twitter.com"
+    #  label = "Twitter"
 
     [[params.footer.social]]
       icon = "fa-facebook"
-      url= "https://www.facebook.com"
+      url= "https://www.facebook.com/Ishita14091996/"
       label = "Facebook"
 
-    [[params.footer.social]]
-      icon = "fa-instagram"
-      url= "https://www.instagram.com"
-      label = "Instagram"
-    
+  #  [[params.footer.social]]
+  #    icon = "fa-instagram"
+  #    url= "https://www.instagram.com"
+  #    label = "Instagram"
+
     [[params.footer.social]]
       icon = "fa-github"
-      url= "https://www.github.com"
+      url= "https://github.com/ishita149/"
       label = "GitHub"
 
     [[params.footer.social]]
       icon = "fa-linkedin"
-      url= "https://www.linkedin.com"
+      url= "https://www.linkedin.com/in/ishitagupta14/"
       label = "LinkedIn"
 
     [[params.footer.quicklinks]]
