--- a/config.toml
+++ b/config.toml
@@ -111,15 +111,15 @@ disqusShortname = ""
 
     [[params.tiles.showcase]]
       title = "NYT masks"
-      subtitle = "Ipsum Dolor Sit Amet"
+      subtitle = "New york mask usage"
       image = "pic01.jpg"
-      url = "blogs/aliquam"
+      url = "blogs/blog5"
 
     [[params.tiles.showcase]]
-      title = "Tempus"
-      subtitle = "Feugiat Amet Tempus"
+      title = "Movies"
+      subtitle = "How has the film industry changed over time?"
       image = "pic02.jpg"
-      url = "blogs/tempus"
+      url = "blogs/project1"
 
     [[params.tiles.showcase]]
       title = "Magna"
@@ -133,17 +133,17 @@ disqusShortname = ""
       image = "pic04.jpg"
       url = "blogs/ipsum"
 
-    [[params.tiles.showcase]]
-      title = "Consequat"
-      subtitle = "Ipsum Dolor Sit Amet"
-      image = "pic05.jpg"
-      url = "blogs/ipsum"
+   #[[params.tiles.showcase]]
+    #  title = "Consequat"
+    #  subtitle = "Ipsum Dolor Sit Amet"
+    #  image = "pic05.jpg"
+    #  url = "blogs/ipsum"
 
-    [[params.tiles.showcase]]
-      title = "Etiam"
-      subtitle = "Feugiat Amet Tempus"
-      image = "pic06.jpg"
-      url = "blogs/ipsum"
+  #  [[params.tiles.showcase]]
+  #    title = "Etiam"
+  #    subtitle = "Feugiat Amet Tempus"
+  #    image = "pic06.jpg"
+  #    url = "blogs/ipsum"
     # You can make more showcases by copy and pasting the code above
 
   [params.blog]
