--- a/config.toml
+++ b/config.toml
@@ -122,10 +122,10 @@ disqusShortname = ""
       url = "blogs/project1"
 
     [[params.tiles.showcase]]
-      title = "Magna"
-      subtitle = "Lorem Etiam Nullam"
+      title = "Gapminder data"
+      subtitle = "How has human lifestyle changed over the years?"
       image = "pic03.jpg"
-      url = "blogs/magna"
+      url = "blogs/gapminder"
 
     [[params.tiles.showcase]]
       title = "Ipsum"
